--- a/conf/zeppelin-env.sh.template
+++ b/conf/zeppelin-env.sh.template
@@ -23,7 +23,8 @@
 # export ZEPPELIN_INTP_MEM       		# zeppelin interpreter process jvm mem options. Default = ZEPPELIN_MEM
 # export ZEPPELIN_INTP_JAVA_OPTS 		# zeppelin interpreter process jvm options. Default = ZEPPELIN_JAVA_OPTS
 
-# export ZEPPELIN_LOG_DIR        		# Where log files are stored.  PWD by default.
+ export ZEPPELIN_LOG_DIR        		/var/log/flipkart/fdp-ml/zeppelin  # Where log files are stored. PWD by
+ default.
 # export ZEPPELIN_PID_DIR        		# The pid files are stored. /tmp by default.
 # export ZEPPELIN_NOTEBOOK_DIR   		# Where notebook saved
 # export ZEPPELIN_NOTEBOOK_S3_BUCKET    # Bucket where notebook saved
