--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -160,5 +160,11 @@
   <description>Allowed sources for REST and WebSocket requests (i.e. http://onehost:8080,http://otherhost.com). If you leave * you are vulnerable to https://issues.apache.org/jira/browse/ZEPPELIN-173</description>
 </property>
 
+<property>
+  <name>zeppelin.server.filter.auth</name>
+  <value>org.apache.zeppelin.utils.AuthFilter</value>
+  <description>class name of filter for auth </description>
+</property>
+
 </configuration>
 
